# relf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Trunk.toml  docker-run.sh  index.html
src/: lib.rs  main.rs  models.rs
src/frontend/: app.rs  mod.rs
src/frontend/components/: card.rs  mod.rs  modal.rs  navigation.rs
src/frontend/pages/: data.rs  home.rs  inside.rs  mod.rs  outside.rs
src/frontend/services/: mod.rs  router.rs  storage.rs
static/css/: common.css  data.css  index.css  inside.css  nav.css  outside.css
