[package]
name = "relf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["server"]

[dependencies]
# Common dependencies
uuid = { version = "1.7", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Server dependencies
warp = { version = "0.3", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# Frontend dependencies - WASM compatible
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
gloo = "0.11"
gloo-storage = "0.3"
wasm-bindgen-futures = "0.4"

[features]
default = []
server = ["warp", "tokio"]
wasm = []
